// Base packets required for SMOO to function
syntax = "proto3";

package packets.system;

import "google/protobuf/wrappers.proto";
import "proto/util/Math.proto";

message SystemPacket {
    oneof packet {
        CaptureInf capture_inf = 1;
        ChangeStage change_stage = 2;
        CostumeInf costume_inf = 3;
        GameInf game_inf = 4;
        HackCapInf hack_cap_inf = 5;
        Init init = 6;
        PlayerConnect player_connect = 7;
        PlayerDC player_dc  = 8;
        PlayerInf player_inf = 9;
        ServerCommand server_command = 10;
        ShineCollect shine_collect = 11;
        TagInf tag_inf = 12;
    }
}

message CaptureInf {
    string hack_name = 1;
}

message ChangeStage {
    string change_stage = 1;
    string change_id = 2;
    int32 scenario_num = 3;
    int32 sub_scenario_type = 4;
}

message CostumeInf {
    string body_model = 1;
    string cap_model = 2;
}

message GameInf {
    google.protobuf.BoolValue is_2d = 1; 
    int32 scenario_num = 2;
    string stage_name = 3;
}

message HackCapInf {
    util.math.Vector3 cap_pos = 1;
    util.math.Quaternion cap_quat = 2;
    google.protobuf.BoolValue is_cap_visible = 3;
    string cap_anim = 4;
}

message Init {
    uint32 max_players = 1;
}

enum ConnectionTypes {
    INIT = 0;
    RECONNECT = 1;
};

message PlayerConnect {
    ConnectionTypes con_type = 1;
    uint32 max_player_count = 2;
    string client_name = 3;
}

message PlayerDC {

}

message AnimBlendWeights {
    repeated float anim_blend_weights = 1;
}

message PlayerInf {
    util.math.Vector3 player_pos = 1;
    util.math.Quaternion player_rot = 2;
    repeated float anim_blend_weights = 3;
    int32 act_name = 4; // PlayerAnims::Type
    int32 sub_act_name = 5; // PlayerAnims::Type
}

message ServerCommand {
    string srv_cmd = 1;
}

message ShineCollect {
    int32 shine_id = 1;
    google.protobuf.BoolValue is_grand = 2;
}

enum TagUpdateType {
    TIME = 0;
    STATE = 1;
}

message TagInf {
    uint32 update_type = 1; // Bit flags of TagUpdateType
    google.protobuf.BoolValue is_it = 2;
    uint32 seconds = 3;
    uint32 minutes = 4;
}